Security fixes, containerization, CI/CD, and production config
Co-authored-by: RC-inventrix <173294083+RC-inventrix@users.noreply.github.com>